--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 
     <modules>
         <module>eureka-server</module>
+        <module>service-hi</module>
+        <module>service-ribbon</module>
     </modules>
 
     <properties>
