--- a/service-feign/src/main/resources/application.yml
+++ b/service-feign/src/main/resources/application.yml
@@ -9,3 +9,7 @@ eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka/
+
+feign:
+  hystrix:
+    enabled: true #开启feign的断路器
