--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>service-hi</module>
         <module>service-ribbon</module>
         <module>service-feign</module>
+        <module>service-zuul</module>
     </modules>
 
     <properties>
@@ -37,6 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
