配置中心使用eureka

--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 server.port=8881
 spring.application.name=config-client
 
-#github分支
+#github\u5206\u652F
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
-#配置中心地址
-spring.cloud.config.uri=http://localhost:8888/
+#\u914D\u7F6E\u4E2D\u5FC3\u5730\u5740,\u4F7F\u7528eureka\u53D1\u73B0\u670D\u52A1\uFF0C\u5C06\u4E0B\u9762\u914D\u7F6E\u6CE8\u91CA
+#spring.cloud.config.uri=http://localhost:8888/
+
+#eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+#\u4ECE\u914D\u7F6E\u6587\u4EF6\u4E2D\u8BFB\u53D6\u6587\u4EF6
+spring.cloud.config.discovery.enabled=true
+#\u914D\u7F6E\u4E2D\u5FC3\u7684\u670D\u52A1\u540D
+spring.cloud.config.discovery.service-id=config-server
