--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=config-server
 server.port=8888
 
+#config
 spring.cloud.config.server.git.uri=https://github.com/szjdbf/SpringCloudConfig
 spring.cloud.config.server.git.search-paths=config-repo
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=szjdbf
 spring.cloud.config.server.git.password=zhanglifang888
+
+#eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
