--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -13,3 +13,14 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 spring.cloud.config.discovery.enabled=true
 #\u914D\u7F6E\u4E2D\u5FC3\u7684\u670D\u52A1\u540D
 spring.cloud.config.discovery.service-id=config-server
+
+#rabbimtmq
+spring.rabbitmq.host=106.12.91.187
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#bus
+spring.cloud.bus.enabled=true
+spring.cloud.bus.trace.enabled=true
+management.endpoints.web.exposure.include=bus-refresh
