--- a/service-hi/src/main/resources/application.yml
+++ b/service-hi/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka/
+      default-zone: http://peer1:8760/eureka/
