--- a/service-hi/src/main/resources/application.yml
+++ b/service-hi/src/main/resources/application.yml
@@ -11,3 +11,8 @@ eureka:
   client:
     service-url:
       default-zone: http://peer1:8760/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
