--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   application:
     name: eureka-server
+  security:
+    user:
+      name: root
+      password: 123456
 
 eureka:
   server:
-    enable-self-preservation: false
+    enable-self-preservation: true
   instance:
     prefer-ip-address: true
 
@@ -21,7 +25,8 @@ eureka:
 
   client:
     service-url:
-      defaultZone: http://peer2:8761/eureka/
+      defaultZone: http://root:123456@peer1:8760/eureka/,http://root:123456@peer2:8761/eureka/
+
 
 
 ---
@@ -37,4 +42,4 @@ eureka:
 
   client:
     service-url:
-      defaultZone: http://peer1:8760/eureka
+      defaultZone: http://root:123456@peer1:8760/eureka/,http://root:123456@peer2:8761/eureka/
