--- a/service-ribbon/src/main/resources/application.yml
+++ b/service-ribbon/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka/
+      defaultZone: http://root:123456@localhost:8761/eureka/
