--- a/service-hi/src/main/resources/application.yml
+++ b/service-hi/src/main/resources/application.yml
@@ -4,8 +4,6 @@ server:
 spring:
   application:
     name: service-hi
-  zipkin:
-    base-url: http://106.12.91.187:9411/
 
 eureka:
   client:
@@ -15,4 +13,16 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: '*'
+
+#日志
+logging:
+  #logging.file和logging.path同时配置时，只会生效一个file
+  #  file: hi.log,
+  level:
+    com.zlf.cloud: error
+  pattern:
+    file: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n'
+    console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n'
+  file:
+    path: ${spring.application.name}/log
