使用高版本springboot和springcloud

--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -25,7 +25,7 @@ eureka:
 
   client:
     service-url:
-      defaultZone: http://root:123456@peer1:8760/eureka/,http://root:123456@peer2:8761/eureka/
+      defaultZone: http://root:123456@peer2:8761/eureka/
 
 
 
@@ -42,4 +42,4 @@ eureka:
 
   client:
     service-url:
-      defaultZone: http://root:123456@peer1:8760/eureka/,http://root:123456@peer2:8761/eureka/
+      defaultZone: http://root:123456@peer1:8760/eureka/
