eureka客户端进行认证

--- a/service-gateway/src/main/resources/application.yml
+++ b/service-gateway/src/main/resources/application.yml
@@ -14,4 +14,4 @@ spring:
 eureka:
   client:
     service-url:
-      default-zone: http://peer1:8760/eureka/
+      defaultZone: http://root:123456@peer1:8760/eureka/
