--- a/service-hi/src/main/resources/application.yml
+++ b/service-hi/src/main/resources/application.yml
@@ -9,15 +9,23 @@ eureka:
   client:
     service-url:
       defaultZone: http://root:123456@peer1:8760/eureka/,http://root:123456@peer2:8761/eureka/
-
+  instance:
+    prefer-ip-address: true #将机器的ip注册到eureka中
 #日志
 logging:
   #logging.file和logging.path同时配置时，只会生效一个file
   #  file: hi.log,
   level:
     com.zlf.cloud: info
-#  pattern:
-#    file: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n'
-#    console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n'
+  #  pattern:
+  #    file: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n'
+  #    console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n'
   file:
     path: D:/${spring.application.name}/log
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*' #开放所有监控点
